use Prioritized + Arrays.sort instead of explicit comparator for Signature